added effects to interactive elements

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </label>
           </div>
         </fieldset>
-        <button type="submit" class="button search-form__submit-button">
+        <button type="submit" class="button search-form__submit-button button-effect">
           Найти
         </button>
       </form>
@@ -88,7 +88,7 @@
     </li>
   </template>
   <template class="more-button-template">
-    <li class="content__list-item-button"><button class="button more-button">Показать еще</button></li>
+    <li class="content__list-item-button"><button class="button more-button button-effect">Показать еще</button></li>
   </template>
 
   <template class="error-template">
