add focus-visible for .search-form__label

--- a/index.html
+++ b/index.html
@@ -32,17 +32,26 @@
             <label class="search-form__label">
               <input type="checkbox" name="time" value="morning" class="search-form__checkbox visually-hidden" />
               <span class="search-form__pseudo-checkbox"></span>
-              <span class="search-form__label-text">Утро</span>
+              <span class="search-form__label-text">
+
+                Утро
+              </span>
             </label>
             <label class="search-form__label">
               <input type="checkbox" name="time" value="afternoon" class="search-form__checkbox visually-hidden" />
               <span class="search-form__pseudo-checkbox"></span>
-              <span class="search-form__label-text">День</span>
+              <span class="search-form__label-text">
+
+                День
+              </span>
             </label>
             <label class="search-form__label">
               <input type="checkbox" name="time" value="night" class="search-form__checkbox visually-hidden" />
               <span class="search-form__pseudo-checkbox"></span>
-              <span class="search-form__label-text">Ночь</span>
+              <span class="search-form__label-text">
+
+                Ночь
+              </span>
             </label>
           </div>
         </fieldset>
